tests/semantic_errors/duplicate_definition.snl
program duplicateDefinition
var integer x;
    char x;
begin
    write(x)
end.
